selamat datang di xeryux-rd

--- a/registar.html
+++ b/registar.html
@@ -55,7 +55,7 @@
                             </button>
                             <p class="text-secondary">
                                 Tidak punya akun?
-                                <a href="" class="text-decoration-none">Daftar</a>
+                                <a href="index.html" class="text-decoration-none">Daftar</a>
                             </p>
                         </div>
                     </div>
