selamat datang di xeryux-rd

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <main class="container d-flex justify-content-center align-items-center h-100">
-        <div class="shadow rounded-5 px-5 overflow-hidden py-md-0 h-100">
+        <div class="shadow rounded-5 px-5 overflow-hidden m-5">
             <div class="row md-mx-3 ">
                 <div class="col-md-6 d-flex align-items-center justify-content-center login-img
                 my-3">
                     <img src="src/logo.png" alt="" class="img-fluid" />
                 </div>
-                <div class="col-md-6 m-6 m-">
+                <div class="col-md-6 my-3 ">
                     <div class="kanan m-4">
                         <h1 class="text-center text-primary mb-5">Masuk Ke Akunmu</h1>
                         <form action="" class="shadow p-3 rounded-3 mb-2">
